# Kursovaya_1

./: CMakeLists.txt  CPackConfig.cmake  LICENSE  README.md  Report.txt  data.json  data.txt
demo/: main.cpp
include/: header.hpp
source/: source.cpp
tests/: tests.cpp
